# mujoco_cpp_nix_template

./: .gitignore  CMakeLists.txt  README.md  flake.nix
assets/data/: data.csv
assets/model/mjcf/: fr3_hand.xml  scene.xml
assets/model/urdf/: fr3_franka_hand.urdf  fr3_hand.urdf
common/include/controller/: ComputedTorqueController.hpp  ImpedanceController.hpp
common/include/math/: orientation_utilities.hpp  robotics_utilities.hpp
common/include/motion/: TrajectoryGenerator.hpp
common/include/robot/: FrankaResearch3.hpp  FrankaResearch3Model.hpp
common/include/utilities/: eigen_types.hpp
common/src/controller/: ComputedTorqueController.cpp  ImpedanceController.cpp
common/src/robot/: FrankaResearch3Model.cpp
src/: main.cc  simulate.cc
test/: CMakeLists.txt  casadi-aba.cpp  fr3_model_test.cpp
